web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -105,4 +105,8 @@ docs to use as a seed for new wikis.
 * list of all missing pages
 * list of all pages or some kind of page map
 
+## page indexes
+
+Might be nice to support automatically generating an index based on headers in a page, for long pages. The question is, how to turn on such an index?
+
 ## [[Bugs]]
