web commit by joey

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -15,3 +15,4 @@
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
 * Doesn't update pages that linked to a page when it is removed.
+* Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.
