--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -14,5 +14,4 @@
 * RecentChanges is a regular page, perhaps it should be automatically
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
-* Doesn't update pages that linked to a page when it is removed.
-* Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.
+* Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.>>>>>>> .r230
