--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -4,7 +4,8 @@ See [[MarkDown]] for documentation of the markup syntax used on this page.
 
 ----
 
-Here's a paragraph.
+Here's a paragraph. This is a confict test; I'm also editing this line on
+the web.
 
 Here's another one with *emphasised* text.
 
@@ -33,6 +34,7 @@ Bulleted list
 * item
 * just to try this stuff - looks kool!
 * test
+* hi mom!
 
 [[WikiLink]]
 
