web commit by joey: conflict test

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -4,7 +4,7 @@ See [[MarkDown]] for documentation of the markup syntax used on this page.
 
 ----
 
-Here's a paragraph. This is a conflict test edit.......
+Here's a paragraph. test 2...
 
 Here's another one with *emphasised* text.
 
