--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -4,7 +4,7 @@ See [[MarkDown]] for documentation of the markup syntax used on this page.
 
 ----
 
-Here's a paragraph. test 2: testing 1.2.3.4..
+Here's a paragraph.
 
 Here's another one with *emphasised* text.
 
