web commit by joey

--- a/doc/features.mdwn
+++ b/doc/features.mdwn
@@ -73,7 +73,7 @@ Currently implemented:
   /Discussion subpage. By default, these links are included in the
   [[templates]] for each page.
 
-* Smart merging and conflict resolution in web browser
+* Smart merging and conflict resolution in your web browser
 
   Since it uses subversion, ikiwiki takes advantage of its smart merging to avoid any conflicts when two people edit different parts of the same page    at the same time. No annoying warnings about other editors, or locking, etc, instead the other person's changes will be automaticaly merged with yours when you commit.
 
