web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -113,4 +113,12 @@ Some wikis will need the abiity to lock a page, or the whole wiki, so that only 
 
 Probably it's ok if locking is only supported for web commits.
 
+## User settings page
+
+A cgi page to allow a user to log out and to edit their prefs, including password, email, and anything we add later (subscriptions, etc).
+
+## Logo
+
+ikiwiki needs a logo. I'm thinking something simple like the word "ikiwiki" with the first "k" backwards; drawn to show that it's "wiki" reflected.
+
 ## [[Bugs]]
