web commit by joey

--- a/doc/setup.mdwn
+++ b/doc/setup.mdwn
@@ -38,7 +38,7 @@ optional support for commits from the web.
 
 6. Repeat steps 4 and 5 as desired, editing or adding pages and rebuilding
    the wiki. You can play around with other ikiwiki parameters such as
-   --wikiname too. Get confortable with its command line.
+   `--wikiname` and `--rebuild` too. Get confortable with its command line (see [[usage]]).
 
 7. By now you should be getting tired of typing in all the command line
    options each time you change something in your wiki's setup. And it's
