--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -15,3 +15,6 @@
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
 * Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.>>>>>>> .r230
+* Web browsers don't word-wrap lines in submitted text, which makes editing a
+  page that someone wrote in a web browser annoying (`gqip` is vim user's
+  friend here). Is there any way to improve this?
