web commit by joey

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -14,7 +14,7 @@
 * RecentChanges is a regular page, perhaps it should be automatically
   replaced with a link to the [[CGI]]?
 * [[ikiwiki]] should go to the same place as [[index]] (on this wiki).
-* Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.>>>>>>> .r230
+* Various inneficencies cause it to sometimes render the same page 3 times for one change. This could be fixed for a 3 fold speedup on commits.
 * Web browsers don't word-wrap lines in submitted text, which makes editing a
   page that someone wrote in a web browser annoying (`gqip` is vim user's
   friend here). Is there any way to improve this?
