web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -109,7 +109,9 @@ Login to the wiki involves sending a password in cleartext over the net.
 Cracking the password only allows editing the wiki as that user though.
 If you care, you can use https, I suppose.
 
-# Fixed holes.
+# Fixed holes
+
+_(Unless otherwise noted, these were discovered and immediaty fixed by the ikiwiki developers)_
 
 ## destination directory file replacement
 
