web commit by joey

--- a/doc/security.mdwn
+++ b/doc/security.mdwn
@@ -111,7 +111,7 @@ If you care, you can use https, I suppose.
 
 # Fixed holes
 
-_(Unless otherwise noted, these were discovered and immediaty fixed by the ikiwiki developers)_
+_(Unless otherwise noted, these were discovered and immediatey fixed by the ikiwiki developers.)_
 
 ## destination directory file replacement
 
