web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -121,4 +121,8 @@ A cgi page to allow a user to log out and to edit their prefs, including passwor
 
 ikiwiki needs a logo. I'm thinking something simple like the word "ikiwiki" with the first "k" backwards; drawn to show that it's "wiki" reflected.
 
+## Page last-changed timestamps
+
+Of course you can go to the history to see when a page last changed in svn, still, it will be nice to have a timestamp at the bottom of pages. Should be based on the modification date of the source file, not the last rebuild date.
+
 ## [[Bugs]]
