web commit by joey

--- a/doc/bugs.mdwn
+++ b/doc/bugs.mdwn
@@ -18,3 +18,4 @@
 * Web browsers don't word-wrap lines in submitted text, which makes editing a
   page that someone wrote in a web browser annoying (`gqip` is vim user's
   friend here). Is there any way to improve this?
+* The diff links in RecentChanges go to a viewcvs backtrace if the rev in question is when the page was added. Is this a viewcvs bug, or a behavior ikiwiki needs to work around?
