web commit by joey

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -72,7 +72,9 @@ case.
 
 ## html
 
-Make the html valid. Add css.
+Make the html valid. Add css and prettify. Make RecentChanges use table for formatting, and images to indicate web vs svn commits and to link to diffs.
+
+All of this should be doable w/o touching a single line of code, just editing the [[templates]] BTW.
 
 ## sigs
 
