web commit by joey

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -1,3 +1,4 @@
 This page is to track users of ikiwiki.
 
 * [This wiki](http://ikiwiki.kitenet.net) (of course!)
+* [[Joey]]'s [codewiki](http://kitenet.net/~joey/codewiki)
