--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -94,6 +94,12 @@ flags such as --verbose can be negated with --no-verbose.
   Specifies a rexexp of source files to exclude from processing.
   May be specified multiple times to add to exclude list.
 
+* --adminuser name
+
+  Specifies a username of a user who has the powers of a wiki admin.
+  Currently allows locking of any page, other powers may be added later.
+  May be specified multiple times for multiple admins.
+
 * --setup configfile
 
   In setup mode, ikiwiki reads the config file, which is really a perl
