add another example

--- a/basewiki/globlist.mdwn
+++ b/basewiki/globlist.mdwn
@@ -14,3 +14,7 @@ pages that match it. So if you want to specify all pages except for
 Discussion pages:
 
 	!*/Discussion
+
+Here's how to specify all pages except discussion pages and the SandBox:
+
+	* !SandBox !*/Discussion
