--- a/doc/globlist.mdwn
+++ b/doc/globlist.mdwn
@@ -11,10 +11,6 @@ name. So if you wanted to list all the pages about tea, and any
 
 You can also prefix an item in the list with "!" to skip matching any
 pages that match it. So if you want to specify all pages except for
-Discussion pages:
-
-	!*/Discussion
-
-Here's how to specify all pages except discussion pages and the SandBox:
+Discussion pages and the SandBox:
 
 	* !SandBox !*/Discussion
