--- a/doc/globlist.mdwn
+++ b/doc/globlist.mdwn
@@ -9,7 +9,7 @@ name. So if you wanted to list all the pages about tea, and any
 
 	*tea* SandBox/*
 
-You can also prefix an item in the list with "!" to skip matching any
+You can also prefix an item in the list with "`!`" to skip matching any
 pages that match it. So if you want to specify all pages except for
 Discussion pages and the SandBox:
 
