underlays are *hard*. feh

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -7,7 +7,7 @@
 
 * Should support RSS for notification of new and changed pages. 
 
-  This can be a static rss file that is generated when the moo
+  This can be a static rss file that is generated when the wiki
 is built. (As long as all changes to all pages is ok.)
 
 * Should support mail notification of new and changed pages.
@@ -105,19 +105,29 @@ you need that data..
 
 ## page indexes
 
-Might be nice to support automatically generating an index based on headers in a page, for long pages. The question is, how to turn on such an index?
+Might be nice to support automatically generating an index based on headers
+in a page, for long pages. The question is, how to turn on such an index?
 
 ## basewiki underlay
 
-Rather than copy the basewii around everywhere, it should be configured to
+Rather than copy the basewiki around everywhere, it should be configured to
 underlay the main srcdir, and pages be rendered from there if not in the
 srcdir. This would allow upgrades to add/edit pages in the basewiki.
 
 Impementaion will be slightly tricky since currently ikiwiki is hardcoded
-in many places to look in srcdir for pages.
+in many places to look in srcdir for pages. Also, there are possible
+security attacks in the vein of providing a file ikiwiki would normally
+skip in the srcdir, and tricking it to processing this file instead of the
+one from the underlaydir.
+
+There are also difficulties related to removing files from the srcdir, and
+exposing ones from the underlaydir. Will need to make sure that the mtime
+for the source file is zeroed when the page is removed, and that it then
+finds the underlay file and treats it as newer.
 
 ## Logo
 
-ikiwiki needs a logo. I'm thinking something simple like the word "ikiwiki" with the first "k" backwards; drawn to show that it's "wiki" reflected.
+ikiwiki needs a logo. I'm thinking something simple like the word "ikiwiki"
+with the first "k" backwards; drawn to show that it's "wiki" reflected.
 
 ## [[Bugs]]
