Major code reoganisation, splitting up the single big file. The two goals kept in mind during this are a) to reduce load time for common cases like cgi and post-commit and b) make the code easier to navigate.
This also modularises RCS support to the extent that it should be possible
to drop in a module for some RCS other than svn, add a switch for it, and
it pretty much just work.

High chance I missed an edge case that breaks something, this is only
barely tested at this point.

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -99,9 +99,16 @@ you need that data..
 
 ## search
 
+* page name substring search
 * full text (use third-party tools?)
+
+## lists
+
 * list of all missing pages
 * list of all pages or some kind of page map
+
+These could be their own static pages updated when other pages are updated.
+Perhaps this ties in with the pluggable renderers stuff.
 
 ## page indexes
 
