Getopt::Long is a huge, heavy perl module. So why use it?
This {gross,amazing} hack makes all wrapped uses of ikiwiki forgo any
option parsing at all. Options come in preparses via an env var from the
wrapper. As a bonus, Wrapper.pm no longer needs to be updated when command
line options are added to the program. Load time is sped up by around 10%.

ikiwikiwrap --params is no longer supported by this change. You will need
to rebuild your wrappers to take advantage of it.

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -44,9 +44,7 @@ flags such as --verbose can be negated with --no-verbose.
   The wrapper is designed to be safely made suid and be run by untrusted
   users, as a [[Subversion]] [[post-commit]] hook, or as a [[CGI]].
 
-  Note that the generated wrapper will ignore all command line parameters
-  except for --params, which will make it print out the parameters it would
-  run ikiwiki with.
+  Note that the generated wrapper will ignore all command line parameters.
 
 * --wrappermode mode
 
