--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Use ./Makefile.PL to generate a Makefile, "make" will generate docs and a
-man page, and "make install" will install ikiwiki.
+Use ./Makefile.PL to generate a Makefile, "make" will build the
+documentation wiki and a man page, and "make install" will install ikiwiki.
 
 All other documentation is in the ikiwiki documentation wiki. 
